Warehouse Details UI update

--- a/app/src/main/res/layout/activity_warehouse_details.xml
+++ b/app/src/main/res/layout/activity_warehouse_details.xml
@@ -13,31 +13,33 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:src="@drawable/industrial"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@+id/warehouse"
         android:layout_marginTop="20dp"
-        android:padding="5dp"
+        android:padding="15dp"
         android:id="@+id/buttons">
 
         <Button
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/send_message"
             android:textColor="#ffffff"
             android:layout_marginRight="10dp"
-            android:id="@+id/message"/>
+            android:id="@+id/message"
+            android:layout_alignParentLeft="true"/>
 
         <Button
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/call"
             android:textColor="#ffffff"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/call"/>
-    </LinearLayout>
+            android:layout_marginLeft="60dp"
+            android:id="@+id/call"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/message"/>
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
