--- a/app/src/main/res/layout/activity_inventory_item.xml
+++ b/app/src/main/res/layout/activity_inventory_item.xml
@@ -34,7 +34,7 @@
         android:layout_below="@id/tool_bar_header"/>
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/item_name_inventory"
         android:text="Item Name"
         android:textSize="32dp"
         android:gravity="center"
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/description_container"
-        android:layout_below="@+id/item_name"
+        android:layout_below="@+id/item_name_inventory"
         android:orientation="vertical">
 
         <RelativeLayout
