--- a/app/src/main/res/menu/client_main_menu.xml
+++ b/app/src/main/res/menu/client_main_menu.xml
@@ -46,7 +46,13 @@
                 android:title="@string/about"
                 android:icon="@drawable/ic_baseline_info_24"/>
 
+            <item
+                android:id="@+id/logout"
+                android:title="Logout"
+                android:icon="@drawable/ic_baseline_login_24"/>
+
         </menu>
+
 
     </item>
 
