--- a/app/src/main/res/menu/manager_main_menu.xml
+++ b/app/src/main/res/menu/manager_main_menu.xml
@@ -51,6 +51,11 @@
                 android:title="@string/about"
                 android:icon="@drawable/ic_baseline_info_24"/>
 
+            <item
+                android:id="@+id/logout_admin"
+                android:title="Logout"
+                android:icon="@drawable/ic_baseline_login_24"/>
+
         </menu>
 
     </item>
